gabriella-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gabriella-python-app
  namespace: grupp5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gabriella-python-app
  template:
    metadata:
      labels:
        app: gabriella-python-app
    spec:
      containers:
      - name: python-app
        image: quay.io/gabohr/guestbook-backend:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
